fixed overlapping section issue

--- a/client/src/components/related/carouselStyle.css
+++ b/client/src/components/related/carouselStyle.css
@@ -1,16 +1,3 @@
-/* .carouselSection {
-  max-width: 90vw;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 8%;
-  font-size: 0.8rem;
-  overflow: scroll;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  flex-wrap: nowrap;
-  white-space: nowrap;
-} */
-
 .cards {
   max-width: 90vw;
   display: flex;
@@ -27,4 +14,27 @@
   cursor: pointer;
   height: 50px;
   margin: auto 0;
+}
+
+/************************************************************
+MEDIA QUERIES
+************************************************************/
+
+@media (min-width: 576px) {
+
+}
+/* Medium devices (tablets, 768px and up) */
+
+@media (min-width: 768px) {
+
+}
+/* Large devices (desktops, 992px and up) */
+
+@media (min-width: 992px) {
+
+}
+/* Extra large devices (large desktops, 1200px and up) */
+
+@media (min-width: 1200px) {
+
 }
